# cmake-template

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-single-platform.yml  doxygen-gh-pages.yml
include/your_project/: library.hpp
src/: library.cpp  main.cpp
src/your_project/: library.cpp
tests/: CMakeLists.txt  library.cpp
tests/your_project/: library.cpp
